--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-SoftLayer==6.0.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
-haikunator==2.1.0
+ibm-cloud-databases==0.1.0
+ibm-cloud-networking-services==0.17.1
 ibm-cloud-sdk-core==3.15.1
+ibm-container-registry==0.0.7
 ibm-platform-services==0.24.0
+ibm-schematics==1.1.0
 ibm-vpc==0.10.0
+idna==3.3
+prettytable==3.2.0
+prompt-toolkit==3.0.29
+Pygments==2.11.2
+PyJWT==2.3.0
 python-dateutil==2.8.2
+requests==2.27.1
+six==1.16.0
+SoftLayer==6.0.2
+urllib3==1.26.9
+wcwidth==0.2.5
